--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -1012,3 +1012,18 @@ h2 {
 .search-btn:hover {
   background-color: #6f7eff;
 }
+
+/* ปุ่มเพิ่ม 3 row */
+.btnbtn {
+    background-color: #2483ff;
+    color: #fff;
+    border-radius: 5px;
+    padding: 10px 20px; /* ปรับขนาดปุ่ม */
+    font-size: 16px; /* ปรับขนาดตัวอักษร */
+    border: none; /* ลบเส้นขอบออก */
+    cursor: pointer; /* ให้เมาส์เป็นรูปมือเมื่อชี้ */
+}
+
+.btnbtn:hover {
+    background-color: #1a6cd8; /* เปลี่ยนสีปุ่มเมื่อ hover */
+}
